some terminal logging when registering and logging in